[metadata]
name = async-unittest
version = 0.0.1
url = https://github.com/AuTa/async_unittest/
author = AuTa King
author_email = auta520@live.com
classifiers =
   Development Status :: 1 - Planning
   Framework :: AsyncIO
   Intended Audience :: Developers
   Topic :: Software Development :: Testing
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 3.6
lisense = BSD 3
lisense_file = LICENSE
description = Make unittest can test asynio libraries
keywords = 
    unittest
    test
    testing
    asyncio
    async
    mock

[options]
packages = find:
python_requires = >=3.6
zip_safe = True
